syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message TimeseriesPoint {
    int64 id = 1;
    google.protobuf.StringValue external_id = 2;
    google.protobuf.BoolValue is_step = 3;

    int64 timestamp = 4;
    oneof datapointType {
        double value_num = 5;
        string value_string = 6;
        Aggregates value_aggregates = 7;
    }

    message Aggregates {
        google.protobuf.DoubleValue average = 1;
        google.protobuf.DoubleValue max = 2;
        google.protobuf.DoubleValue min = 3;
        google.protobuf.Int64Value count = 4;
        google.protobuf.DoubleValue sum = 5;
        google.protobuf.DoubleValue interpolation = 6;
        google.protobuf.DoubleValue step_interpolation = 7;
        google.protobuf.DoubleValue continuous_variance = 8;
        google.protobuf.DoubleValue discrete_variance = 9;
        google.protobuf.DoubleValue total_variation = 10;
    }
}

